--- a/pom.xml
+++ b/pom.xml
@@ -12,19 +12,23 @@
 
     <properties>
         <spring.version>5.3.14</spring.version>
+        <spring.context>6.1.6</spring.context>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
         <spring-data-jpa.version>3.2.5</spring-data-jpa.version>
         <hibernate-entitymanager.version>5.6.15.Final</hibernate-entitymanager.version>
+        <jakarta.transaction-api>2.0.1</jakarta.transaction-api>
+        <jakarta.persistence-api>3.1.0</jakarta.persistence-api>
+        <mysql.connector-j>8.4.0</mysql.connector-j>
     </properties>
 
     <dependencies>
 
-<!--        spring-hibernate-entitymanager-->
+        <!--        spring-hibernate-entitymanager-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.1.6</version>
+            <version>${spring.context}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -36,29 +40,27 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate-entitymanager.version}</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate</groupId>-->
-<!--            <artifactId>hibernate-core</artifactId>-->
-<!--            <version>5.6.3.Final</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>jakarta.transaction</groupId>
             <artifactId>jakarta.transaction-api</artifactId>
-            <version>2.0.1</version>
+            <version>${jakarta.transaction-api}</version>
         </dependency>
-
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>${jakarta.persistence-api}</version>
+        </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.4.0</version>
+            <version>${mysql.connector-j}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>${spring-data-jpa.version}</version>
         </dependency>
-<!--        spring-mvc-->
+        <!--        spring-mvc-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -70,7 +72,6 @@
             <version>${javax.servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
